kubernetes/base/apps/self-hosted/silverbullet/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: silverbullet
  labels:
    app: silverbullet
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: silverbullet
  template:
    metadata:
      labels:
        app: silverbullet
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: silverbullet
          image: zefhemel/silverbullet:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /space
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: silverbullet
