kubernetes/base/apps/self-hosted/silverbullet/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
spec:
  selector:
    app: silverbullet
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
